src/css/global.less
html {
    .font-text;
}

body {
    margin: 0;
}

h1, h2, h3, h4, h5, h6 {
    .font-header;
}

.font-text {
    font-family: "Inter", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', "微软雅黑", "Microsoft Yahei UI", sans-serif;
}

.font-header {
    font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', "微软雅黑", "Microsoft Yahei UI", sans-serif;;
}

@primary: #fcd307;

